force-app/main/default/objects/animalos__Assessment__c/fields/aos_Fearful_Behaviours__c.field-meta.xml
<CustomField>
    <fullName>aos_Fearful_Behaviours__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>Has your foster pet shown any fearful behaviours?</inlineHelpText>
    <label>Fearful Behaviours</label>
    <type>TextArea</type>
</CustomField>