force-app/main/default/objects/animalos__Assessment__c/fields/aos_Feet_Check__c.field-meta.xml
<CustomField>
    <fullName>aos_Feet_Check__c</fullName>
    <description>What is the feet conditions on animal income?</description>
    <inlineHelpText>What is the feet conditions on animal income?</inlineHelpText>
    <label>Feet Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Injury</fullName>
            </value>
            <value>
                <fullName>Deformities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>