force-app/main/default/objects/animalos__Assessment__c/fields/aos_Feet_Nails__c.field-meta.xml
<CustomField>
    <fullName>aos_Feet_Nails__c</fullName>
    <label>Feet &amp; Nails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>