force-app/main/default/objects/animalos__Assessment__c/fields/aos_First_exposed_to_unfamiliar__c.field-meta.xml
<CustomField>
    <fullName>aos_First_exposed_to_unfamiliar__c</fullName>
    <label>First exposed to unfamiliar situations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X0_4</valueSetName>
    </valueSet>
</CustomField>