force-app/main/default/objects/animalos__Assessment__c/fields/aos_Flags__c.field-meta.xml
<CustomField>
    <fullName>aos_Flags__c</fullName>
    <label>Flags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>