force-app/main/default/objects/animalos__Assessment__c/fields/aos_Flight_Test__c.field-meta.xml
<CustomField>
    <fullName>aos_Flight_Test__c</fullName>
    <label>Flight Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>