force-app/main/default/objects/animalos__Assessment__c/fields/aos_Food_Motivation__c.field-meta.xml
<CustomField>
    <fullName>aos_Food_Motivation__c</fullName>
    <label>Food Motivation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motivated</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Snatches/overstimulated</fullName>
            </value>
            <value>
                <fullName>Body blocks/growls/takes and avoids</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>