force-app/main/default/objects/animalos__Assessment__c/fields/aos_Food_Motivation_Pig_ear_Bone__c.field-meta.xml
<CustomField>
    <fullName>aos_Food_Motivation_Pig_ear_Bone__c</fullName>
    <label>Food Motivation - Pig ear/Bone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motivated</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Snatches/overstimulated</fullName>
            </value>
            <value>
                <fullName>Body block/growls/freeze/bite takes + avoids</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>