force-app/main/default/objects/animalos__Assessment__c/fields/aos_Food_Motivation_Wet_dry_food__c.field-meta.xml
<CustomField>
    <fullName>aos_Food_Motivation_Wet_dry_food__c</fullName>
    <label>Food Motivation - Wet/dry food</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Snatches to Gutsy</fullName>
            </value>
            <value>
                <fullName>Body Block/freeze/growl/bite</fullName>
            </value>
            <value>
                <fullName>Remove takes and avoids</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>