force-app/main/default/objects/animalos__Assessment__c/fields/aos_Food_taken_away_by_a_household__c.field-meta.xml
<CustomField>
    <fullName>aos_Food_taken_away_by_a_household__c</fullName>
    <label>Food taken away by a household member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X0_4</valueSetName>
    </valueSet>
</CustomField>