force-app/main/default/objects/animalos__Assessment__c/fields/aos_General__c.field-meta.xml
<CustomField>
    <fullName>aos_General__c</fullName>
    <label>General</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sleeping Observed</fullName>
            </value>
            <value>
                <fullName>Scratching/Grooming</fullName>
            </value>
            <value>
                <fullName>Not seen grooming</fullName>
            </value>
            <value>
                <fullName>Cage furniture or bedding displaced or evidence of destruction</fullName>
            </value>
            <value>
                <fullName>Hiding</fullName>
            </value>
            <value>
                <fullName>Grooming excessively</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>