force-app/main/default/objects/animalos__Assessment__c/fields/aos_General_Appearance__c.field-meta.xml
<CustomField>
    <fullName>aos_General_Appearance__c</fullName>
    <label>General Appearance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Abnormal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>