force-app/main/default/objects/animalos__Assessment__c/fields/aos_General_Play__c.field-meta.xml
<CustomField>
    <fullName>aos_General_Play__c</fullName>
    <inlineHelpText>Handler instigates a game, runs around and watches response and ability to calm. Stop if the dog becomes too excited or reacts negatively.</inlineHelpText>
    <label>General Play</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relaxed/engaged: interested/appropriate, responds, follows, may play bow, calms quickly or copes</fullName>
            </value>
            <value>
                <fullName>Avoids: retreats, may actively ignore or avoid but recovers and approaches afterwards</fullName>
            </value>
            <value>
                <fullName>Fearful: lowered body language, tail tuck, may alarm bark, does not recover easily</fullName>
            </value>
            <value>
                <fullName>Excitable: barks, arousal increase but positive valence</fullName>
            </value>
            <value>
                <fullName>Overstimulated: high arousal, no self-regulation, may mouth, jump up, vocalise</fullName>
            </value>
            <value>
                <fullName>Confrontational: may bark, growl, lunge, clasp, hump, slow or no recovery</fullName>
            </value>
            <value>
                <fullName>Not completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>