force-app/main/default/objects/animalos__Assessment__c/fields/aos_Genital_Anus_Check__c.field-meta.xml
<CustomField>
    <fullName>aos_Genital_Anus_Check__c</fullName>
    <description>What is the genital/anus condition on intake?</description>
    <inlineHelpText>What is the genital/anus condition on intake?</inlineHelpText>
    <label>Genital/Anus Check</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Swelling</fullName>
            </value>
            <value>
                <fullName>Discharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>