force-app/main/default/objects/animalos__Assessment__c/fields/aos_Genitals_Anus__c.field-meta.xml
<CustomField>
    <fullName>aos_Genitals_Anus__c</fullName>
    <label>Genitals &amp; Anus</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>