force-app/main/default/objects/animalos__Assessment__c/fields/aos_GI_Oral_Dental_Faecal_Quality__c.field-meta.xml
<CustomField>
    <fullName>aos_GI_Oral_Dental_Faecal_Quality__c</fullName>
    <label>GI (Oral / Dental / Faecal Quality)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Abnormal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>