force-app/main/default/objects/animalos__Assessment__c/fields/aos_Greetings__c.field-meta.xml
<CustomField>
    <fullName>aos_Greetings__c</fullName>
    <label>Greetings (at cage front)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approaches/Tail up</fullName>
            </value>
            <value>
                <fullName>Relaxed body does no approach/Slow blink</fullName>
            </value>
            <value>
                <fullName>Shows underside/Rolls/Yawns/Reaches</fullName>
            </value>
            <value>
                <fullName>Grooms/Shakes body</fullName>
            </value>
            <value>
                <fullName>Freezes</fullName>
            </value>
            <value>
                <fullName>Avoids/hides</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>