force-app/main/default/objects/animalos__Assessment__c/fields/aos_Greetings_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_Greetings_Score__c</fullName>
    <label>Greetings Score (Feline)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>