force-app/main/default/objects/animalos__Assessment__c/fields/aos_Groomed_bathed_by_a_household_member__c.field-meta.xml
<CustomField>
    <fullName>aos_Groomed_bathed_by_a_household_member__c</fullName>
    <label>Groomed/bathed by a household member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X0_4</valueSetName>
    </valueSet>
</CustomField>