force-app/main/default/objects/animalos__Assessment__c/fields/aos_Grooming_Experience__c.field-meta.xml
<CustomField>
    <fullName>aos_Grooming_Experience__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>Have you groomed your foster pet? How did it respond?</inlineHelpText>
    <label>Grooming Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relaxed and tolerant</fullName>
            </value>
            <value>
                <fullName>Avoided and frightened</fullName>
            </value>
            <value>
                <fullName>Became very still or frozen, or rolled over</fullName>
            </value>
            <value>
                <fullName>Overstimulated and grabbed at brush, grooming equipment or person</fullName>
            </value>
            <value>
                <fullName>Growled, snapped or body very tense</fullName>
            </value>
            <value>
                <fullName>Became very still or frozen</fullName>
            </value>
            <value>
                <fullName>Growled or hissed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>