force-app/main/default/objects/animalos__Assessment__c/fields/aos_Handling__c.field-meta.xml
<CustomField>
    <fullName>aos_Handling__c</fullName>
    <label>Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Can be picked up/carried/sits comfortably in arms</fullName>
            </value>
            <value>
                <fullName>Can be picked up/carried with squirming</fullName>
            </value>
            <value>
                <fullName>Allows you to pick up but is hissing/growling</fullName>
            </value>
            <value>
                <fullName>Cannot be picked up/carried</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>