force-app/main/default/objects/animalos__Assessment__c/fields/aos_Handling_SAE__c.field-meta.xml
<CustomField>
    <fullName>aos_Handling_SAE__c</fullName>
    <inlineHelpText>Excellent	- Can be picked up/ carried with minimal struggling. Will sit in lap. Or will step onto your hand.
Moderate	- Can be picked up/carried with struggling. May get down from lap. Or Will eventually step up onto your hand.
Limited - Can be picked up/carried briefly. Or is interested in stepping onto your hand but doesn’t 
Poor - Cannot be picked up/carried. Will not step up onto your hand &amp; retreats in cage.</inlineHelpText>
    <label>Handling SAE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>