force-app/main/default/objects/animalos__Assessment__c/fields/aos_Handling_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_Handling_Score__c</fullName>
    <label>Handling Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>