force-app/main/default/objects/animalos__Assessment__c/fields/aos_Has_your_dog_cat_had_their_first__c.field-meta.xml
<CustomField>
    <fullName>aos_Has_your_dog_cat_had_their_first__c</fullName>
    <inlineHelpText>Has your [dog] [cat] had their first vet visit</inlineHelpText>
    <label>Has your [dog] [cat] had their first</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>