force-app/main/default/objects/animalos__Assessment__c/fields/aos_Heart_Heart_Rate__c.field-meta.xml
<CustomField>
    <fullName>aos_Heart_Heart_Rate__c</fullName>
    <label>Heart/ Heart Rate</label>
    <type>TextArea</type>
</CustomField>