force-app/main/default/objects/animalos__Assessment__c/fields/aos_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>aos_Home_Phone__c</fullName>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>