force-app/main/default/objects/animalos__Assessment__c/fields/aos_Household_Activity_Level__c.field-meta.xml
<CustomField>
    <fullName>aos_Household_Activity_Level__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>Is your house a quiet or busy household?</inlineHelpText>
    <label>Household Activity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quiet</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>