force-app/main/default/objects/animalos__Assessment__c/fields/aos_Household_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>aos_Household_Member_Count__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>How many people are in your household?</inlineHelpText>
    <label>Household Member Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>