force-app/main/default/objects/animalos__Assessment__c/fields/aos_Household_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>aos_Household_Recommendation__c</fullName>
    <label>Household Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quiet household</fullName>
            </value>
            <value>
                <fullName>Moderate household</fullName>
            </value>
            <value>
                <fullName>Busy household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>