force-app/main/default/objects/animalos__Assessment__c/fields/aos_Household_Recommendation_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Household_Recommendation_Comments__c</fullName>
    <label>Household Recommendation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>