force-app/main/default/objects/animalos__Assessment__c/fields/aos_Household_Recommendations_SAE__c.field-meta.xml
<CustomField>
    <fullName>aos_Household_Recommendations_SAE__c</fullName>
    <inlineHelpText>Young children - Could cope with 0-10yrs
Older children	- Could cope with 10yrs +
Other Birds or Poultry - Can tolerate/shows interest in presence of other rabbits.
Experience needed	- Small, Medium or Large Parrot Experience Needed or none if applicable.
Hand Tame - Not hand tame, Semi hand tame or hand tame?
Housing - Best indoors, outdoors, both or doesn’t matter. 
Moderate social needs - Well handled, seeks out affection, enjoys human interaction.
Low social - Independent or shy</inlineHelpText>
    <label>Household Recommendations SAE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>aos_Animal_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Young children</fullName>
            </value>
            <value>
                <fullName>Older children</fullName>
            </value>
            <value>
                <fullName>Other Animals of same type</fullName>
            </value>
            <value>
                <fullName>Experience needed</fullName>
            </value>
            <value>
                <fullName>Hand Tame?</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Moderate social needs</fullName>
            </value>
            <value>
                <fullName>Low social needs</fullName>
            </value>
            <value>
                <fullName>Grooming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>