force-app/main/default/objects/animalos__Assessment__c/fields/aos_How_is_your_new_pet_adjusting__c.field-meta.xml
<CustomField>
    <fullName>aos_How_is_your_new_pet_adjusting__c</fullName>
    <label>How is your new pet adjusting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Very well</fullName>
            </value>
            <value>
                <fullName>Fairly well</fullName>
            </value>
            <value>
                <fullName>Not well</fullName>
            </value>
            <value>
                <fullName>Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>