force-app/main/default/objects/animalos__Assessment__c/fields/aos_How_Long_left_alone__c.field-meta.xml
<CustomField>
    <fullName>aos_How_Long_left_alone__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>How long is your dog left at a time?</inlineHelpText>
    <label>How Long left alone?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rarely leave</fullName>
            </value>
            <value>
                <fullName>Under 1 hour</fullName>
            </value>
            <value>
                <fullName>1-3 hours</fullName>
            </value>
            <value>
                <fullName>3-6 hours</fullName>
            </value>
            <value>
                <fullName>Over 6 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>