force-app/main/default/objects/animalos__Assessment__c/fields/aos_How_would_you_rate_the_adoption__c.field-meta.xml
<CustomField>
    <fullName>aos_How_would_you_rate_the_adoption__c</fullName>
    <inlineHelpText>How would you rate the adoption experience</inlineHelpText>
    <label>How would you rate the adoption exper</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exceeded expectations</fullName>
            </value>
            <value>
                <fullName>Met expectations</fullName>
            </value>
            <value>
                <fullName>Below expectations</fullName>
            </value>
            <value>
                <fullName>Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>