force-app/main/default/objects/animalos__Assessment__c/fields/aos_HR__c.field-meta.xml
<CustomField>
    <fullName>aos_HR__c</fullName>
    <label>HR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>