force-app/main/default/objects/animalos__Assessment__c/fields/aos_Hydration__c.field-meta.xml
<CustomField>
    <fullName>aos_Hydration__c</fullName>
    <label>Hydration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Norm</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>7-8</fullName>
            </value>
            <value>
                <fullName>8-10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>