force-app/main/default/objects/animalos__Assessment__c/fields/aos_Hyperactive_trouble_settling_down__c.field-meta.xml
<CustomField>
    <fullName>aos_Hyperactive_trouble_settling_down__c</fullName>
    <label>Hyperactive trouble settling down</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Never_Seldom_Sometimes_Usually_Always</valueSetName>
    </valueSet>
</CustomField>