force-app/main/default/objects/animalos__Assessment__c/fields/aos_If_you_have_other_pets_have_they_all__c.field-meta.xml
<CustomField>
    <fullName>aos_If_you_have_other_pets_have_they_all__c</fullName>
    <inlineHelpText>If you have other pets, have they all adjusted to each other?</inlineHelpText>
    <label>If you have other pets, have they all</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>