force-app/main/default/objects/animalos__Assessment__c/fields/aos_In_yard_alone__c.field-meta.xml
<CustomField>
    <fullName>aos_In_yard_alone__c</fullName>
    <label>In yard alone</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rests/watches with relaxed body</fullName>
            </value>
            <value>
                <fullName>Explores/engages with enrichment</fullName>
            </value>
            <value>
                <fullName>Whines/cries</fullName>
            </value>
            <value>
                <fullName>Always alert/vocalising</fullName>
            </value>
            <value>
                <fullName>Pacing/panting</fullName>
            </value>
            <value>
                <fullName>Searches for exits/scratches or digs at perimeter/jumps at fence</fullName>
            </value>
            <value>
                <fullName>Hides/avoids</fullName>
            </value>
            <value>
                <fullName>Wire biting, circling, running fence line</fullName>
            </value>
            <value>
                <fullName>Escape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>