force-app/main/default/objects/animalos__Assessment__c/fields/aos_In_yard_alone_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_In_yard_alone_Score__c</fullName>
    <label>In yard alone Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>