force-app/main/default/objects/animalos__Assessment__c/fields/aos_Indoor_Outdoor_Preference__c.field-meta.xml
<CustomField>
    <fullName>aos_Indoor_Outdoor_Preference__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>Do they prefer being indoors or outdoors?</inlineHelpText>
    <label>Indoor/Outdoor Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoors</fullName>
            </value>
            <value>
                <fullName>Outdoors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>