force-app/main/default/objects/animalos__Assessment__c/fields/aos_Initial_Approach_FHF__c.field-meta.xml
<CustomField>
    <fullName>aos_Initial_Approach_FHF__c</fullName>
    <description>Initial Approach - fake hand food</description>
    <inlineHelpText>Initial Approach - fake hand food</inlineHelpText>
    <label>Initial Approach - FHF</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LTS_Behaviour_Eval_Initial_Approach</valueSetName>
    </valueSet>
</CustomField>