force-app/main/default/objects/animalos__Assessment__c/fields/aos_Initial_Approach_SFH_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_Initial_Approach_SFH_Score__c</fullName>
    <label>Initial Approach - SFH Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>