force-app/main/default/objects/animalos__Assessment__c/fields/aos_Initial_Approach_ST__c.field-meta.xml
<CustomField>
    <fullName>aos_Initial_Approach_ST__c</fullName>
    <description>Initial Approach - stick touch</description>
    <inlineHelpText>Initial Approach - stick touch</inlineHelpText>
    <label>Initial Approach - ST</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LTS_Behaviour_Eval_Initial_Approach</valueSetName>
    </valueSet>
</CustomField>